# livekit-plugins-reson8

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  pr-title.yml  release-please.yml
examples/: voice_agent.py
livekit/plugins/reson8/: __init__.py  _utils.py  stt.py
python/: README.md
python/livekit/plugins/reson8/: __init__.py  _auth.py  _utils.py  stt.py
tests/: conftest.py  test_options.py  test_stream.py  test_stt.py  test_utils.py
ts/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
ts/examples/: voiceAgent.ts
ts/src/: index.ts  stt.ts  utils.ts
