[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-reson8"
description = "Reson8 STT plugin for LiveKit Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["livekit", "agents", "stt", "reson8", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "livekit-agents[codecs]>=1.0",
    "websockets>=13.0",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/reson8lab/livekit-plugins-reson8"
Repository = "https://github.com/reson8lab/livekit-plugins-reson8"

[tool.hatch.version]
path = "livekit/plugins/reson8/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]
