[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-reson8"
description = "Reson8 STT plugin for LiveKit Agents"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Reson8 team" }]
requires-python = ">=3.9"
keywords = ["livekit", "agents", "stt", "reson8", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "livekit-agents[codecs]>=1.0",
    "websockets>=13.0",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://reson8.dev"
Repository = "https://github.com/reson8lab/livekit-plugins-reson8"
Issues = "https://github.com/reson8lab/livekit-plugins-reson8/issues"

[tool.hatch.version]
path = "livekit/plugins/reson8/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.9"
files = ["livekit/plugins/reson8"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_missing_imports = true
